--- a/styles/styles-home.css
+++ b/styles/styles-home.css
@@ -37,7 +37,7 @@ hr{
   top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
-  color: black;
+  color: #f0c040;
   font-size: 5rem;
   text-shadow: 0 0 10px rgba(194, 194, 194, 0.781);
   -webkit-text-stroke: 1px white;
@@ -278,4 +278,60 @@ footer{
     text-align: center;
     font-size: 0.8rem;
     margin-bottom: 0.5rem;
+}
+
+@media screen and (max-width: 768px) {
+  .info-div {
+    flex-direction: column;
+    gap: 1rem;
+    text-align: center;
+  }
+
+  .nav-central {
+    flex-direction: column;
+    gap: 10px;
+  }
+
+  .contacto a {
+    padding: 0.7rem 1.2rem;
+    font-size: 0.9rem;
+  }
+
+  .container {
+    grid-template-columns: 1fr;
+    padding: 1rem;
+    margin: 0;
+  }
+
+  .banner h1 {
+    font-size: 2rem;
+  }
+
+  .banner p {
+    font-size: 1rem;
+  }
+
+  .banner button {
+    padding: 0.7rem 1.5rem;
+  }
+
+  iframe {
+    height: 100vh; /* ajusta para que no sobrepase */
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .titulo {
+    font-size: 1.8rem;
+    margin: 1rem 0;
+  }
+
+  .contacto-form {
+    padding: 1rem;
+  }
+
+  .campo input,
+  .campo textarea {
+    font-size: 1rem;
+  }
 }
