--- a/styles/styles-relojes.css
+++ b/styles/styles-relojes.css
@@ -34,7 +34,7 @@ p{
     border-radius: 20px;
 }
 
-.container img{
+.container .reloj-pr{
     height: 25rem;
     aspect-ratio: 1 / 1;
     object-fit: cover;
@@ -43,7 +43,7 @@ p{
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
-.container img:hover{
+.container .reloj-pr:hover{
     cursor: pointer;
     transform: scale(1.1);
     box-shadow: 0 0 10px gold;
@@ -109,4 +109,28 @@ p{
     cursor: pointer;
 }
 
+.relacionados{
+    display: flex;
+    gap: 1rem;
+    padding: 2rem;
+    margin: 1rem;
+    background-color: rgba(255, 255, 255, 0.3);
+    border-radius: 20px;
+    overflow: hidden;
+    justify-content: space-around;
+}
 
+.relacionados .rel{
+    height: 13rem;
+    border-radius: 15px;
+    aspect-ratio: 1 / 1;
+    object-fit: cover;
+    border: 2px solid gold;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+.relacionados .rel:hover{
+    cursor: pointer;
+    transform: scale(1.1);
+    box-shadow: 0 0 10px gold;
+}
