--- a/styles/styles-home.css
+++ b/styles/styles-home.css
@@ -335,3 +335,39 @@ footer{
     font-size: 1rem;
   }
 }
+
+/* Añadir estos media queries */
+@media screen and (max-width: 1024px) and (min-width: 769px) {
+  .banner {
+    height: 20rem;
+  }
+
+  .banner h1 {
+    font-size: 3.5rem;
+    top: 35%;
+  }
+
+  .banner p {
+    top: 55%;
+    font-size: 1.2rem;
+  }
+
+  .banner .btn {
+    top: 70%;
+    padding: 0.8rem 1.8rem;
+    font-size: 1.1rem;
+  }
+
+  .container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .testimonios {
+    margin: 2rem 1rem;
+    padding: 1.5rem;
+  }
+
+  .testimonios h2 {
+    font-size: 2.2rem;
+  }
+}
