--- a/styles/styles-relojes.css
+++ b/styles/styles-relojes.css
@@ -15,6 +15,7 @@ body{
     text-align: center;
     margin: 2rem 0 2rem 0;
     font-size: 2.7rem;
+    animation: fadeIn 1s ease-out forwards;
 }
 
 h1,h2,h3{
@@ -32,6 +33,7 @@ p{
     margin: 1rem;
     background-color: rgba(255, 255, 255, 0.3);
     border-radius: 20px;
+    animation: fadeIn 1s ease-out forwards;
 }
 
 .container .reloj-pr{
@@ -118,6 +120,7 @@ p{
     border-radius: 20px;
     overflow: hidden;
     justify-content: space-around;
+    animation: fadeIn 1s ease-out forwards;
 }
 
 .relacionados .rel{
@@ -133,6 +136,11 @@ p{
     cursor: pointer;
     transform: scale(1.1);
     box-shadow: 0 0 10px gold;
+}
+
+@keyframes fadeIn {
+  from { opacity: 0; transform: translateY(30px); }
+  to { opacity: 1; transform: translateY(0); }
 }
 
 @media screen and (max-width: 768px) {
@@ -161,7 +169,6 @@ p{
   }
 }
 
-/* Añadir estos media queries */
 @media screen and (max-width: 1024px) and (min-width: 769px) {
   .container {
     flex-direction: column;
